Fix extra space in global search view with horizontal menu (#11305)
* Fix global search view with horizontal menu

* Remove extra space between global search sections

--- a/css/includes/pages/_search.scss
+++ b/css/includes/pages/_search.scss
@@ -180,11 +180,17 @@
 }
 
 body.horizontal-layout {
-    .search_page {
+    .search_page:not(.search_page_global) {
         .search-container {
             @include media-breakpoint-up(sm) {
                 height: calc(100vh - #{$topbar-height} - #{$contextbar-height} - #{$content-margin});
             }
+        }
+    }
+
+    .search_page_global {
+        @include media-breakpoint-up(sm) {
+            height: calc(100vh - #{$topbar-height} - #{$contextbar-height} - #{$content-margin});
         }
     }
 }
